test/parsing/vass/wrong-escapes-2.good
wrong-escapes-2.chpl:3: syntax error: near 'DONE'
